Returned to full graphql, added new exception handlings and graphql endpoints